--- a/semana7-jpa-aula4/semana7/src/main/resources/application.properties
+++ b/semana7-jpa-aula4/semana7/src/main/resources/application.properties
@@ -5,8 +5,14 @@ spring.datasource.username=meuUsuario
 spring.datasource.password=minhaSenha
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Create drop -> Deleta as tabelas e cria novamento
-# Create -> cria as tabelas,  ele não atualiza tabelas
+# Create drop -> Deleta as tabelas e cria novamento, ele cria o banco pelos scripts e deleta ele novamente
+# Create -> cria as tabelas, ele não atualiza tabelas
 # Update -> atualiza as tabelas
 # Validade -> Valida que o sua representação do bd é igual ao bd existente
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
+
+# Comando para ativar os scripts
+# Always -> Sempre executa os script
+# Embedded -> Sempre executa os script para os banco em memória, ex: H2
+# never -> Nunca executa os script
+spring.sql.init.mode=always
